--- a/lib_project/lib_project.csproj
+++ b/lib_project/lib_project.csproj
@@ -54,11 +54,11 @@
     </Compile>
     <Compile Include="DBControl.cs" />
     <Compile Include="EncryptDES.cs" />
-    <Compile Include="Form2.cs">
+    <Compile Include="MainUsers.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form2.designer.cs">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <Compile Include="MainUsers.designer.cs">
+      <DependentUpon>MainUsers.cs</DependentUpon>
     </Compile>
     <Compile Include="Lend.cs" />
     <Compile Include="login.cs">
@@ -85,8 +85,8 @@
     <EmbeddedResource Include="Control_guihuan.resx">
       <DependentUpon>Control_guihuan.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form2.resx">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <EmbeddedResource Include="MainUsers.resx">
+      <DependentUpon>MainUsers.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="login.resx">
       <DependentUpon>login.cs</DependentUpon>
